force-app/main/default/objects/Movie__c/fields/Show_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Show_End_Time__c</fullName>
    <label>Show End Time</label>
    <type>Time</type>
</CustomField>