force-app/main/default/objects/Movie__c/fields/Show_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Show_Start_Time__c</fullName>
    <label>Show Start Time</label>
    <type>Time</type>
</CustomField>