force-app/main/default/objects/Movie__c/fields/Show_Times__c.field-meta.xml
<CustomField>
    <fullName>Show_Times__c</fullName>
    <label>Show Times</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>00:00-03:00</fullName>
            </value>
            <value>
                <fullName>03:00-06:00</fullName>
            </value>
            <value>
                <fullName>06:00-09:00</fullName>
            </value>
            <value>
                <fullName>09:00-12:00</fullName>
            </value>
            <value>
                <fullName>12:00-15:00</fullName>
            </value>
            <value>
                <fullName>15:00-18:00</fullName>
            </value>
            <value>
                <fullName>18:00-21:00</fullName>
            </value>
            <value>
                <fullName>21:00-00:00</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>